--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
     <ui-view></ui-view>
 </body>
 <!-- build:js js/libs/libs.min.js?v=_VERSION_ -->
-<script src="js/libs/angular.min.js?v=_VERSION_"></script>
-<script src="js/libs/angular-ui-route.min.js?v=_VERSION_"></script>
+<script src="js/libs/angular.min.js"></script>
+<script src="js/libs/angular-ui-route.min.js"></script>
 <!-- /build -->
-<script src="js/config/config.js?v=_VERSION_"></script>
-<script src="js/app.js?v=_VERSION_"></script>
-<script src="js/controllers/indexCtrl.js?v=_VERSION_"></script>
-<script src="js/directive/myslider.js?v=222222222222222"></script>
-<script src="js/controllers/index2Ctrl.js?v=222222222222"></script>
+<script src="js/config/config.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controllers/indexCtrl.js"></script>
+<script src="js/directive/myslider.js"></script>
+<script src="js/controllers/index2Ctrl.js"></script>
 </html>
