--- a/main.html
+++ b/main.html
@@ -18,5 +18,4 @@
 <script src="js/app.js"></script>
 <script src="js/controllers/indexCtrl.js"></script>
 <script src="js/directive/myslider.js"></script>
-<script src="js/controllers/index2Ctrl.js"></script>
-</html>
+</html><!--  -->
