调整，加入图片切换回调

--- a/main.html
+++ b/main.html
@@ -10,12 +10,10 @@
 <body>
     <ui-view></ui-view>
 </body>
-<!-- build:js js/libs/libs.min.js?v=_VERSION_ -->
 <script src="js/libs/angular.min.js"></script>
 <script src="js/libs/angular-ui-route.min.js"></script>
-<!-- /build -->
 <script src="js/config/config.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/indexCtrl.js"></script>
 <script src="js/directive/myslider.js"></script>
-</html><!--  -->
+</html>
