--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta name="format-detection" content="telephone=no" />
     <title ng-bind="title"></title>
+    <link rel="stylesheet" href="style/base.css?v=_VERSION_"/>
     <link rel="stylesheet" href="style/myslider.css?v=_VERSION_"/>
 </head>
 <body>
